syntax = "proto3";

package pollen.peer.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/sambigeara/pollen/api/genpb/pollen/peer/v1;peerv1";

message Known {
  bytes noise_pub = 1;
  bytes identity_pub = 2;
  string addr = 3;
}

message Invite {
  string id = 1 [(buf.validate.field).string = {uuid: true}];
  bytes psk = 2 [(buf.validate.field).bytes = {len: 32}];
  repeated string addr = 3;
}

message PeerStore {
  map<string, Known> peers = 1;
}

message InviteStore {
  map<string, Invite> invites = 1;
}

enum PunchMode {
  PUNCH_MODE_UNSPECIFIED = 0;
  PUNCH_MODE_DIRECT = 1;
  PUNCH_MODE_BIRTHDAY = 2;
}

message PunchCoordRequest {
  bytes peer_id = 1;
  int32 local_port = 2;
  PunchMode mode = 3;
}

message PunchCoordTrigger {
  bytes peer_id = 1;
  string self_addr = 2;
  repeated string peer_addrs = 3;
  PunchMode mode = 4;
}
